# kicad-pcb-framer

./: .coverage  .flake8  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  README.md  docker-compose.yml  framer.py  pyproject.toml  pytest.ini  requirements.txt  scadder.py
.github/workflows/: ci.yml
src/framer/: __init__.py  _version.py  framer.py
tests/: __init__.py  test_framer.py
